# sales-assistant

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
backend/: pyproject.toml
insurance-multi-agent-main/: .gitignore
insurance-multi-agent-main/backend/: pyproject.toml
insurance-multi-agent-main/backend/app/: main.py
insurance-multi-agent-main/backend/app/api/v1/endpoints/: workflow.py
insurance-multi-agent-main/backend/app/models/: output.py
insurance-multi-agent-main/backend/app/workflow/: __init__.py  supervisor.py
insurance-multi-agent-main/backend/app/workflow/agents/sales/: company_info_agent.py  news_info_agent.py  poi_agent.py  product_fit_agent.py  sales_approach_agent.py  test.py
insurance-multi-agent-main/backend/app/workflow/data/: output.json
scripts/: debug-vector-search.ts  ingest.ts  test-org-chat.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/[orgUrl]/: layout.tsx
src/app/[orgUrl]/chat/: page.tsx
src/app/[orgUrl]/manage/knowledge/: page.tsx
src/app/api/chat/: route.ts
src/app/api/documents/: route.ts
src/app/api/ingest/: route.ts
src/app/api/search/: route.ts
src/app/api/upload/: route.ts
src/app/components/: SourceCitation.tsx
src/lib/types/: database.types.ts  db-customtype.type.ts
src/utils/supabase/: server.ts
